--- a/WZT_mianjing/面经1.md
+++ b/WZT_mianjing/面经1.md
@@ -29,3 +29,26 @@ uint32_t swap_endian(uint32_t val) {
 （1）const常量有数据类型，而宏常量没有数据类型。编译器可以对前者进行类型安全检查。而对后者只进行字符替换，没有类型安全检查，并且在字符替换可能会产生意料不到的错误。  
 （2）有些集成化的调试工具可以对const常量进行调试，但是不能对宏常量进行调试。  
 （3）const可节省空间，避免不必要的内存分配，提高效率
+
+#### 03. 海量数据问题
+https://blog.csdn.net/weixin_38333555/article/details/80274120  
+
+e.g. 给⼀一个超过100G大小的log ﬁle, log中存着IP地址, 设计算法找到出现次数最多的IP地址。如何找到top K的IP？  
+
+这样的问题如果出现在数据量较小的情形下，用一个map或者unordered_map都能很快的处理，但是100G这样的量级放在一个map里是绝对不可行的。因此，我们采用哈希切分。
+
+什么是**哈希切分**？
+
+        100G文件我们无法处理，是1G文件我们能处理，100M文件我们能处理
+
+        因此，哈希切分的第一步：映射切分(分治)
+
+首先把所有log file中的IP挨个提取出来，然后这个总量为100G的IP文件，我们通过对所有进行IP%1000这样一个操作，把100G的大文件切分成了1000个100M的小文件
+
+      第二步：对每个切分小文件进行统计
+
+      这个统计过程一般直接用`unordered_map<IP,size_t>`就能完成，然后在每个切分小文件里，我们很快就能找到出现次数最多的那个IP
+
+        第三步：排序
+
+        由第二步得到了1000个出现频率最高的IP后，由于我们在这里只用找出出现次数最多的IP，那么O(n)次内遍历一趟就能找出来，当然，如果找前k个，那就用一个容量为k的小堆就能完成。
